--- a/notebooks/section2/reggression_metric.ipynb
+++ b/notebooks/section2/reggression_metric.ipynb
@@ -172,8 +172,8 @@
    "source": [
     "## RMSEとMAEの特徴\n",
     "- 一つの代表値で予測を行う場合\n",
-    "    - RMSEを最小にする予測値は***平均値***\n",
-    "    - MAEを最小にする予測値は***中央値***"
+    "    - RMSEを最小にする予測値は**平均値**\n",
+    "    - MAEを最小にする予測値は**中央値**"
    ]
   },
   {
@@ -236,13 +236,6 @@
     "    axes[i].legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
